--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,7 +2,7 @@
 <html ng-app="app">
 <head>
     <title ng-bind="title"></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, text/html">
     <!-- build:css /css/style.min.css -->
     <link rel="stylesheet" href="/css/style.css">
     <!-- endbuild -->
@@ -10,7 +10,7 @@
 <body ng-controller="AppCtrl">
 <div ng-include="'header.tpl.html'"></div>
 <div class="page">
-    <div ng-view class="container"></div>
+    <div ng-view class="container" ></div>
 </div>
 <div ng-include="'footer.tpl.html'"></div>
 <!-- build:js /app.min.js -->
